--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1 style="text-align: center">Welcome to website!</h1>
-<a class="btn btn-primary items-center" href="/">List Airline</a>
+<a class="btn btn-primary items-center" href="/list">List Airline</a>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
